Addedd all the unit testing for the DAO layer